# openai-cicd

./: LICENSE  README.md  app.py  pyproject.toml
static/styles/: styles.css
templates/: index.html
